fixed spacing issue with signup button on nav bar

--- a/day12/style.css
+++ b/day12/style.css
@@ -85,8 +85,8 @@ header {
     list-style: none;
 }
 
-.nav__item {
-  margin-right: 1em;
+.nav__item + .nav__item {
+  margin-left: 1em;
 }
 
 .nav__link {
